Prevent education overflow to time
Previously "MAI in Mechanical Engineering" would overflow
into "2014 - 2019" on iPads as the 'time' div is in the
same div as 'degree'; now they are in separate div containers
using the 'flex' css attribute

--- a/_sass/online-cv/_base.scss
+++ b/_sass/online-cv/_base.scss
@@ -2,8 +2,6 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: $text-color-secondary;
-    font-size: 14px;
-    padding: 30px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -32,10 +30,11 @@ p {
     max-width: 1000px;
     margin: 0 auto;
     position: relative;
-    @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
+    // @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
 }
 
 .sidebar-wrapper {
+    font-size: 14px;
     background: $theme-color;
     position: absolute;
     right: 0;
@@ -48,7 +47,7 @@ p {
     }
     .profile-container {
         padding: 30px;
-        //background: darken($theme-color, 10%);
+        background: darken($theme-color, 10%);
         background: rgba(0, 0, 0, 0.2);
         text-align: center;
         color: #fff;
@@ -153,6 +152,7 @@ p {
 }
 
 .main-wrapper {
+    font-size: 14px;
     background: #fff;
     padding: 60px;
     padding-right: 340px;
@@ -178,23 +178,24 @@ p {
         position: relative;
         overflow: hidden;
         margin-bottom: 2px;
+        display: flex;
     }
     .job-title, .degree {
         color: $text-color;
         font-size: 16px;
         margin-top: 0;
         margin-bottom: 0;
-        font-weight: 500;
+        flex: 75%;
     }
     .time {
-        position: absolute;
+        color: $text-grey;
         right: 0;
         top: 0;
-        color: $text-grey;
+        flex: 10%;
     }
-    .company, .university {
-        margin-bottom: 10px;
+    .company, .university, .result {
         color: $text-grey;
+        margin-bottom: 0;
     }
 
     .project-title {
@@ -202,7 +203,7 @@ p {
         font-weight: 400;
         margin-top: 0;
         margin-bottom: 5px;
-	color: darken($theme-color, 15%);
+	    color: darken($theme-color, 15%);
     }
     .projects-section {
         .intro {
